[package]
name = "mcinterface"
license = "MIT"
authors = [ "arthomnix" ]
keywords = [ "minecraft", "wasm", "webassembly", "wasmcraft" ]
categories = [ "api-bindings", "wasm", "no-std::no-alloc" ]
description = "Rust bindings for wasmcraft2 API, allowing you to run Rust code in vanilla Minecraft"
homepage = "https://github.com/arthomnix/mcinterface-rs"
repository = "https://github.com/arthomnix/mcinterface-rs"
readme = "README.md"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = [ "fmt" ]
fmt = []